[gd_scene load_steps=3 format=3 uid="uid://git_panel_ui"]

[ext_resource type="Script" path="res://src/ui/git/git_panel_ui.gd" id="1_git_panel_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.065, 0.08, 0.97)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.25, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GitPanelUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_git_panel_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Git Version Control"
horizontal_alignment = 1

[node name="PathLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Repo: ..."

[node name="RefreshRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RefreshStatusButton" type="Button" parent="MarginContainer/VBoxContainer/RefreshRow"]
layout_mode = 2
text = "Refresh Status"

[node name="RefreshHistoryButton" type="Button" parent="MarginContainer/VBoxContainer/RefreshRow"]
layout_mode = 2
text = "Refresh History"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChangesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Changes (unstaged / untracked)"

[node name="ChangesList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 150)
theme_override_font_sizes/font_size = 12

[node name="ChangesButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StageSelectedButton" type="Button" parent="MarginContainer/VBoxContainer/ChangesButtons"]
layout_mode = 2
text = "Stage Selected"

[node name="StageAllButton" type="Button" parent="MarginContainer/VBoxContainer/ChangesButtons"]
layout_mode = 2
text = "Stage All"

[node name="StagedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Staged"

[node name="StagedList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 120)
theme_override_font_sizes/font_size = 12

[node name="StagedButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UnstageSelectedButton" type="Button" parent="MarginContainer/VBoxContainer/StagedButtons"]
layout_mode = 2
text = "Unstage Selected"

[node name="UnstageAllButton" type="Button" parent="MarginContainer/VBoxContainer/StagedButtons"]
layout_mode = 2
text = "Unstage All"

[node name="CommitLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Commit message"

[node name="CommitMessage" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
size_flags_horizontal = 3
size_flags_vertical = 1
wrap_mode = 1

[node name="CommitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Commit"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Ready"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HistoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "History"

[node name="HistoryList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 140)
theme_override_font_sizes/font_size = 12
